[gd_scene load_steps=9 format=3 uid="uid://dupdccx6p8wn8"]

[ext_resource type="Script" path="res://scenes/inappstore/purchase.gd" id="1_y67ds"]
[ext_resource type="Texture2D" uid="uid://bxa7xsle8ylr1" path="res://assets/images/purchase/feed.jpg" id="2_w44ev"]
[ext_resource type="Texture2D" uid="uid://cxgg2u3sjbknc" path="res://assets/images/purchase/fog_valley_button.png" id="3_c1rni"]
[ext_resource type="Texture2D" uid="uid://d34d5ymcwmpvf" path="res://assets/images/purchase/oasis_button.png" id="3_hxnnx"]
[ext_resource type="Texture2D" uid="uid://bhfk4d72sdpmu" path="res://assets/images/purchase/inapp_button.png" id="3_jed4q"]
[ext_resource type="FontFile" uid="uid://ctno0lg21fevr" path="res://assets/font/Atma-Bold.ttf" id="4_gelr3"]
[ext_resource type="Texture2D" uid="uid://ble7ku33p5vl" path="res://assets/images/purchase/tick.png" id="5_iub2s"]
[ext_resource type="PackedScene" uid="uid://b8jbj3f5jek44" path="res://scenes/buttons/feather.tscn" id="5_tb0um"]

[node name="Purchase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y67ds")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0.19, 0.19, 0.19, 0.815686)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_w44ev")
expand_mode = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 401.0
offset_top = -201.0
offset_right = 433.0
offset_bottom = 311.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.578)
size_flags_horizontal = 3
alignment = 1

[node name="FoggyValley" type="TextureButton" parent="CanvasLayer/HBoxContainer2"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("3_c1rni")

[node name="Price" type="Label" parent="CanvasLayer/HBoxContainer2/FoggyValley"]
layout_mode = 2
offset_left = 35.0
offset_top = 494.81
offset_right = 194.0
offset_bottom = 625.81
theme_override_colors/font_color = Color(0.980392, 0.815686, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 70
text = "test"

[node name="Name" type="Label" parent="CanvasLayer/HBoxContainer2/FoggyValley"]
layout_mode = 2
offset_left = 20.0
offset_top = -95.1557
offset_right = 199.0
offset_bottom = 51.8443
theme_override_colors/font_color = Color(0.98, 0.571667, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 80
text = "test"
horizontal_alignment = 1

[node name="Tick" type="TextureRect" parent="CanvasLayer/HBoxContainer2/FoggyValley"]
visible = false
layout_mode = 0
offset_left = 323.333
offset_top = -88.2353
offset_right = 739.333
offset_bottom = 152.765
scale = Vector2(0.600001, 0.872852)
texture = ExtResource("5_iub2s")

[node name="Space" type="Control" parent="CanvasLayer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ThreeVillages" type="TextureButton" parent="CanvasLayer/HBoxContainer2"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("3_jed4q")

[node name="Price" type="Label" parent="CanvasLayer/HBoxContainer2/ThreeVillages"]
layout_mode = 2
offset_left = 35.0
offset_top = 494.81
offset_right = 194.0
offset_bottom = 625.81
theme_override_colors/font_color = Color(0.980392, 0.815686, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 70
text = "test"

[node name="Name" type="Label" parent="CanvasLayer/HBoxContainer2/ThreeVillages"]
layout_mode = 2
offset_left = 20.0
offset_top = -95.1557
offset_right = 199.0
offset_bottom = 51.8443
theme_override_colors/font_color = Color(0.98, 0.571667, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 80
text = "test"
horizontal_alignment = 1

[node name="Tick" type="TextureRect" parent="CanvasLayer/HBoxContainer2/ThreeVillages"]
visible = false
layout_mode = 0
offset_left = 340.0
offset_top = -86.5052
offset_right = 756.0
offset_bottom = 154.495
scale = Vector2(0.600001, 0.872852)
texture = ExtResource("5_iub2s")

[node name="Space2" type="Control" parent="CanvasLayer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Oasis" type="TextureButton" parent="CanvasLayer/HBoxContainer2"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("3_hxnnx")

[node name="Price" type="Label" parent="CanvasLayer/HBoxContainer2/Oasis"]
layout_mode = 2
offset_left = 35.0
offset_top = 494.81
offset_right = 194.0
offset_bottom = 625.81
theme_override_colors/font_color = Color(0.980392, 0.815686, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 70
text = "test"

[node name="Name" type="Label" parent="CanvasLayer/HBoxContainer2/Oasis"]
layout_mode = 2
offset_left = 20.0
offset_top = -95.1557
offset_right = 199.0
offset_bottom = 51.8443
theme_override_colors/font_color = Color(0.98, 0.571667, 0, 1)
theme_override_colors/font_shadow_color = Color(0.30139, 0.30139, 0.30139, 1)
theme_override_colors/font_outline_color = Color(0.790502, 0.214126, 0.145146, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 80
text = "test"
horizontal_alignment = 1

[node name="Tick" type="TextureRect" parent="CanvasLayer/HBoxContainer2/Oasis"]
visible = false
layout_mode = 0
offset_left = 328.333
offset_top = -86.5052
offset_right = 744.333
offset_bottom = 154.495
scale = Vector2(0.600001, 0.872852)
texture = ExtResource("5_iub2s")

[node name="BackContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Back" parent="CanvasLayer/BackContainer" instance=ExtResource("5_tb0um")]
process_mode = 3
position = Vector2(-512, -166)
key = "BACK"
color = "red"

[node name="ProcessingContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 37.0
offset_right = 142.0
offset_bottom = 127.0
grow_horizontal = 2

[node name="Processing" type="Label" parent="CanvasLayer/ProcessingContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.4864, 0.8, 0.352, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 55
text = "processing"

[node name="SuccessContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 37.0
offset_right = 142.0
offset_bottom = 127.0
grow_horizontal = 2

[node name="Success" type="Label" parent="CanvasLayer/SuccessContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.4864, 0.8, 0.352, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 55
text = "processing"

[node name="ErrorContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.0
offset_top = 37.0
offset_right = 44.0
offset_bottom = 127.0
grow_horizontal = 2

[node name="Error" type="Label" parent="CanvasLayer/ErrorContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.947406, 4.06705e-06, 3.85046e-07, 1)
theme_override_colors/font_shadow_color = Color(0.11975, 0.209525, 0.296173, 1)
theme_override_fonts/font = ExtResource("4_gelr3")
theme_override_font_sizes/font_size = 55
text = "err"

[node name="RestoreContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Restore" parent="CanvasLayer/RestoreContainer" instance=ExtResource("5_tb0um")]
process_mode = 3
position = Vector2(52, -159)
key = "Restore"
color = "green"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="CanvasLayer/HBoxContainer2/FoggyValley" to="." method="purchase_foggy_valley"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/ThreeVillages" to="." method="purchase_three_villages"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer2/Oasis" to="." method="purchase_oasis"]
[connection signal="clicked" from="CanvasLayer/BackContainer/Back" to="." method="back"]
[connection signal="clicked" from="CanvasLayer/RestoreContainer/Restore" to="." method="restore_purchased"]
[connection signal="timeout" from="Timer" to="." method="check_events"]
